[tool.poetry]
name = "btc-app"
version = "0.1.0"
description = ""
authors = ["timofejkazakov <t.kazakov@agora.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
neo4j = "^5.20.0"
httpx = "^0.27.0"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
